# smart-research-crew

./: .env.example  .gitignore  GEMINI.md  LICENSE  Makefile  NEXT PHASES AFTER BUGS.txt  PLAN.md  README.md  activeContext.md  debug_current_state.py  force_browser_refresh.md  main.py  requirements.txt  test_frontend_sse.html  test_sse_manual.py  validate_sse_fix.py
backend/: =5.0.0  crew.py  pyproject.toml  pytest.ini
backend/src/: __init__.py  database.py  main.py  models.py
backend/src/agents/: __init__.py  report_assembler.py  section_researcher.py
backend/src/api/: routes.py
backend/src/cache/: __init__.py  cache_integration.py  redis_cache.py
backend/src/config/: __init__.py  logging.py  settings.py
backend/src/memory/: redis_memory.py
backend/src/services/: research_service.py
backend/src/utils/: __init__.py  helpers.py
backend/tests/: test_agents.py  test_agents.py_disabled  test_api.py  test_database.py  test_e2e.py  test_frontend_integration.py  test_integration.py  test_models.py  test_redis_memory.py  test_research_service.py  test_utils.py  test_utils.py_disabled
backend/tests/utils/: __init__.py  sse_test_utils.py  test_sse_test_utils.py
docs/context/: backend-patterns.md  frontend-patterns.md  user-journey-snippets.md
examples/: demo_full_system.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/public/: test-sse.html
frontend/src/: App.tsx  Report.tsx  Wizard.tsx  index.css  test-setup.ts
scripts/: dev.sh
(+19 files in other folders)
